# protonmail-claude-imap

./: .env.example  .gitignore  CLAUDE.md  README.md  build_log.md  pyproject.toml
DECISION/: 001-imap-library-selection.md  002-auto-organize.md  003-loop-mode.md  004-folder-recommend.md  005-training.md
src/protonmail_claude/: __init__.py  __main__.py  auto_organizer.py  claude_client.py  cli.py  digest.py  drafter.py  folder_recommender.py  imap_client.py  label_manager.py  pattern_store.py  profile.py
src/protonmail_claude/prompts/: auto_organize_system.txt  digest_system.txt  drafter_system.txt  folder_recommend_system.txt  label_assistant_system.txt
tests/: conftest.py  test_auto_organizer.py  test_claude_client.py  test_digest.py  test_drafter.py  test_folder_recommender.py  test_imap_client.py  test_label_manager.py  test_loop_mode.py  test_training.py
