[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protonmail-claude"
version = "0.1.0"
description = "ProtonMail + Claude API integration via Proton Bridge"
requires-python = ">=3.12"
dependencies = [
    "imapclient>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
queue = [
    "arq>=0.26.0",
]

[project.scripts]
protonmail-claude = "protonmail_claude.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
